[package]
name = "lsm-engine"
version = "0.1.0"
edition = "2024"
description = "An LSM-tree based key-value storage engine built from scratch"

[dependencies]
# Dependencies added per milestone as you learn what each replaces:
# M01: rand        — skip list level randomization
rand = "0.8"
# M05: parking_lot — better RwLock/Mutex than std
# M06: crc32fast   — WAL record checksums
crc32fast = "1.3"
# M13: bytes       — efficient byte buffer manipulation
# M16: xxhash-rust — fast 128-bit hashing for bloom filters
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# M22: crossbeam-channel — compaction scheduler communication

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "engine_bench"
harness = false
